deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netflix-pawan
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix
  namespace: netflix-pawan
spec:
  replicas: 5
  selector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - netflix
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
      - name: netflix
        image: nginx
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
