svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix
  namespace: netflix-pawan
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: netflix
