ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  namespace: netflix-pawan
  labels:
    app: netflix
spec:
  ingressClassName: nginx
  rules:
  - host: pk.pawankumar.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix
            port:
              number: 80
